fixed image tag

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,4 +27,4 @@ jobs:
           file: ./src/AzureAppConfigurationEmulator/Dockerfile
           context: .
           push: true
-          tags: ${{ github.repository_owner }}/${{ github.repository }}:latest
+          tags: ${{ github.repository }}:latest
